# linux-do-explorer

./: .gitignore  AGENTS.md  GROK2API-DEPLOY.md  MEGA-SUNTO.md  README-MY-PI.md  VPS-STACK-RELAY-ENCRYPTED.md  encrypt_vps.py  encrypt_vps_v2.py  grok-video-relay-guide.md  linux-do-grok-guide.md  linux-do-navigation-guide.md  minimax-setup-instructions.md  package.json  recommended-relays.md  relay-monitor-agent-design.md  relay-services-guide.md
.pi/: settings.json
linuxdo-archive-assistant/: .gitignore  LICENSE  README.md  archive_core.py  local_bridge_server.py  pyproject.toml  save_linuxdo_topic.py
linuxdo-archive-assistant/browser-extension/: README.md  manifest.json  popup.html  popup.js
linuxdo-archive-assistant/configs/: pdf.default.json
linuxdo-archive-assistant/docs/: linuxdo-forum-post.md  open-source-release-plan.md  refactor-slim-down.md  release-notes-v0.2.0.md  topic-import.schema.json  windows-portable-guide.md
linuxdo-archive-assistant/packaging/windows/: bridge.spec
linuxdo-archive-assistant/scripts/: build_windows_portable.ps1
pi/: manifest.json
pi/extensions/linux-do-explorer/: index.ts
pi/skills/relay-explorer/: SKILL.md
pi/skills/vps-stack-relay/: SKILL.md
scripts/: bootstrap-pi.sh  import-grok2api-tokens.sh  sync-pi-secrets.sh
